crates/parser/src/tests/snapshots/kcl_parser__tests__expr__lambda_expr_0.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"lambda {}\"####)"
---
Node {
    node: Lambda(
        LambdaExpr {
            args: None,
            body: [],
            return_ty: None,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 9,
}
