crates/parser/src/tests/snapshots/kcl_parser__tests__expr__lambda_expr_3.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests ::\nparsing_expr_string(r####\"lambda {\n    if True:\n        _a = 1\n    else:\n        _a = 2\n    _a\n}\"####)"
---
Node {
    node: Lambda(
        LambdaExpr {
            args: None,
            body: [
                Node {
                    node: If(
                        IfStmt {
                            body: [
                                Node {
                                    node: Assign(
                                        AssignStmt {
                                            targets: [
                                                Node {
                                                    node: Target {
                                                        name: Node {
                                                            node: "_a",
                                                            filename: "",
                                                            line: 3,
                                                            column: 8,
                                                            end_line: 3,
                                                            end_column: 10,
                                                        },
                                                        paths: [],
                                                        pkgpath: "",
                                                    },
                                                    filename: "",
                                                    line: 3,
                                                    column: 8,
                                                    end_line: 3,
                                                    end_column: 10,
                                                },
                                            ],
                                            value: Node {
                                                node: NumberLit(
                                                    NumberLit {
                                                        binary_suffix: None,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                                filename: "",
                                                line: 3,
                                                column: 13,
                                                end_line: 3,
                                                end_column: 14,
                                            },
                                            ty: None,
                                        },
                                    ),
                                    filename: "",
                                    line: 3,
                                    column: 8,
                                    end_line: 3,
                                    end_column: 14,
                                },
                            ],
                            cond: Node {
                                node: NameConstantLit(
                                    NameConstantLit {
                                        value: True,
                                    },
                                ),
                                filename: "",
                                line: 2,
                                column: 7,
                                end_line: 2,
                                end_column: 11,
                            },
                            orelse: [
                                Node {
                                    node: Assign(
                                        AssignStmt {
                                            targets: [
                                                Node {
                                                    node: Target {
                                                        name: Node {
                                                            node: "_a",
                                                            filename: "",
                                                            line: 5,
                                                            column: 8,
                                                            end_line: 5,
                                                            end_column: 10,
                                                        },
                                                        paths: [],
                                                        pkgpath: "",
                                                    },
                                                    filename: "",
                                                    line: 5,
                                                    column: 8,
                                                    end_line: 5,
                                                    end_column: 10,
                                                },
                                            ],
                                            value: Node {
                                                node: NumberLit(
                                                    NumberLit {
                                                        binary_suffix: None,
                                                        value: Int(
                                                            2,
                                                        ),
                                                    },
                                                ),
                                                filename: "",
                                                line: 5,
                                                column: 13,
                                                end_line: 5,
                                                end_column: 14,
                                            },
                                            ty: None,
                                        },
                                    ),
                                    filename: "",
                                    line: 5,
                                    column: 8,
                                    end_line: 5,
                                    end_column: 14,
                                },
                            ],
                        },
                    ),
                    filename: "",
                    line: 2,
                    column: 4,
                    end_line: 6,
                    end_column: 4,
                },
                Node {
                    node: Expr(
                        ExprStmt {
                            exprs: [
                                Node {
                                    node: Identifier(
                                        Identifier {
                                            names: [
                                                Node {
                                                    node: "_a",
                                                    filename: "",
                                                    line: 6,
                                                    column: 4,
                                                    end_line: 6,
                                                    end_column: 6,
                                                },
                                            ],
                                            pkgpath: "",
                                            ctx: Load,
                                        },
                                    ),
                                    filename: "",
                                    line: 6,
                                    column: 4,
                                    end_line: 6,
                                    end_column: 6,
                                },
                            ],
                        },
                    ),
                    filename: "",
                    line: 6,
                    column: 4,
                    end_line: 6,
                    end_column: 6,
                },
            ],
            return_ty: None,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 7,
    end_column: 1,
}
